# DynDom1D_Python

./: .gitignore  LICENSE  METHODOLOGY.md  README.md  paper.bib  paper.md  pyproject.toml
.github/workflows/: test-paper.yaml  test-paper.yml  test-software.yml
reference_output/1CTS_A_2CTS_A/: 1cts_A_2cts_A.pml
reference_output/1OMP_A_1ANF_A/: 1omp_A_1anf_A.pml
reference_output/1adgA_2ohxA/: 1adg_A_2ohx_A.pml  1adg_A_2ohx_A.w5_info
reference_output/1cdlA_1cllA/: 1cdl_A_1cll_A.pml  1cdl_A_1cll_A.w5_info
reference_output/1ctsA_2ctsA/: 1cts_A_2cts_A.pml  1cts_A_2cts_A.w5_info
reference_output/1ompA_1anfA/: 1omp_A_1anf_A.pml  1omp_A_1anf_A.w5_info
src/DynDom1D_Python/: Clusterer.py  Domain.py  DomainBuilder.py  FileMngr.py  __init__.py  main.py  requirements.txt
src/DynDom1D_Python/data/: 1adgA_2ohxA_command.txt  1cdllA_1cllA_command.txt  1ctsA_2ctsA_command.txt  1ompA_1anfA_command.txt  4akeA_2eckB_command.txt  param.txt
src/DynDom1D_Python/output/1ADG_A_2OHX_A/: 1adg_A_2ohx_A.pml  1adg_A_2ohx_A.w5_info
src/DynDom1D_Python/output/1CDL_A_1CLL_A/: 1cdl_A_1cll_A.pml  1cdl_A_1cll_A.w5_info
src/DynDom1D_Python/output/1CTS_A_2CTS_A/: 1cts_A_2cts_A.w5_info
src/DynDom1D_Python/output/1OMP_A_1ANF_A/: 1omp_A_1anf_A.w5_info
src/DynDom1D_Python/output/4ake_A_2eck_B/: 4ake_A_2eck_B.pml  4ake_A_2eck_B.w5_info
src/DynDom_Python/: FileMngr.py  HierarchySystem.py  Protein.py  clustering_logger.py  main.py
src/DynDom_Python/data/: command.txt
src/DynDom_Python/output/4ake_A_2eck_B/: 4ake_A_2eck_B.pml  4ake_A_2eck_B.w5_info
